// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiBadge is disabled 1`] = `
<div>
  <span
    aria-label="aria-label"
    class="ouiBadge ouiBadge-isDisabled ouiBadge--iconLeft testClass1 testClass2"
    data-test-subj="test subject string"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge is rendered 1`] = `
<div>
  <span
    aria-label="aria-label"
    class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
    data-test-subj="test subject string"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge is rendered with href and rel provided 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
  >
    <span
      class="ouiBadge__content"
    >
      <a
        aria-label="aria-label"
        class="ouiBadge__childButton"
        data-test-subj="test subject string"
        href="/#/"
        rel="noopener noreferrer"
        title="Content"
      >
        Content
      </a>
    </span>
  </span>
</div>
`;

exports[`OuiBadge is rendered with href provided 1`] = `
<div>
  <a
    aria-label="aria-label"
    class="ouiBadge ouiBadge-isClickable ouiBadge--iconLeft testClass1 testClass2"
    data-test-subj="test subject string"
    href="/#/"
    rel="noreferrer"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </a>
</div>
`;

exports[`OuiBadge is rendered with iconOnClick and href provided 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
  >
    <span
      class="ouiBadge__content"
    >
      <a
        aria-label="aria-label"
        class="ouiBadge__childButton"
        data-test-subj="test subject string"
        href="/#/"
        rel="noreferrer"
        title="Content"
      >
        Content
      </a>
    </span>
  </span>
</div>
`;

exports[`OuiBadge is rendered with iconOnClick and onClick provided 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
  >
    <span
      class="ouiBadge__content"
    >
      <button
        aria-label="aria-label"
        class="ouiBadge__childButton"
        data-test-subj="test subject string"
        title="Content"
      >
        Content
      </button>
    </span>
  </span>
</div>
`;

exports[`OuiBadge is rendered with iconOnClick provided 1`] = `
<div>
  <span
    aria-label="aria-label"
    class="ouiBadge ouiBadge--iconLeft testClass1 testClass2"
    data-test-subj="test subject string"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge is rendered with onClick provided 1`] = `
<div>
  <button
    aria-label="aria-label"
    class="ouiBadge ouiBadge-isClickable ouiBadge--iconLeft testClass1 testClass2"
    data-test-subj="test subject string"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </button>
</div>
`;

exports[`OuiBadge props color accent is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(238, 120, 157); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color accepts hex 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(51, 51, 51); color: rgb(255, 255, 255);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color accepts rgba 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(255, 255, 255); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color danger is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(255, 126, 98); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color default is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color primary is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(121, 170, 217); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color secondary is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(109, 204, 177); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color success is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(109, 204, 177); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props color warning is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(241, 216, 111); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props iconSide left is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
      <span
        class="ouiBadge__icon"
        color="inherit"
        data-ouiicon-type="user"
      />
    </span>
  </span>
</div>
`;

exports[`OuiBadge props iconSide right is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconRight"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
      <span
        class="ouiBadge__icon"
        color="inherit"
        data-ouiicon-type="user"
      />
    </span>
  </span>
</div>
`;

exports[`OuiBadge props iconType is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0);"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
      <span
        class="ouiBadge__icon"
        color="inherit"
        data-ouiicon-type="user"
      />
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with accent 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(238, 120, 157); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with danger 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(255, 126, 98); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with default 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(211, 218, 230); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with hollow 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft"
    style="border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with primary 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(121, 170, 217); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with secondary 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(109, 204, 177); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with success 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(109, 204, 177); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;

exports[`OuiBadge props style is rendered with warning 1`] = `
<div>
  <span
    class="ouiBadge ouiBadge--iconLeft"
    style="background-color: rgb(241, 216, 111); color: rgb(0, 0, 0); border: 4px solid tomato;"
    title="Content"
  >
    <span
      class="ouiBadge__content"
    >
      <span
        class="ouiBadge__text"
      >
        Content
      </span>
    </span>
  </span>
</div>
`;
